--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -94,7 +94,8 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  padding-right: 1.5rem;
+  padding: 1.5rem;
+  overflow: visible;
 }
 
 .heroLogo {
